--- a/Урок 28-34. Функции. Модули/Python - HW28.html
+++ b/Урок 28-34. Функции. Модули/Python - HW28.html
@@ -7,172 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
     rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .sidebar {
-      width: 240px;
-      height: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      position: sticky;
-      top: 0;
-    }
-
-    .sidebar img {
-      height: 240px;
-      width: 240px;
-    }
-
-    .sidebar #copyrights {
-      background: linear-gradient(to right, #343434 0%, #363636 100%);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .right-block {
-      flex: 1;
-      width: 70%;
-      gap: 50px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 50px 25px 50px 0;
-      margin: 10px;
-    }
-
-    .right-rect {
-      background-color: rgba(38, 38, 38, 0.75);
-      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.6);
-      padding: 30px 25px;
-      border-radius: 10px;
-    }
-
-    .right-rect h2,
-    .right-rect .hl-text {
-      margin: 0;
-      color: #FFC000;
-    }
-
-    .right-rect h3 {
-      margin-top: 40px;
-      margin-bottom: 0px;
-      color: #FFC000;
-    }
-
-    .console {
-      background-color: #1E1F22;
-      border-radius: 5px;
-      margin-top: 10px;
-      position: relative;
-    }
-
-    p {
-      margin-top: 15px;
-      margin-bottom: 0px;
-    }
-
-    pre {
-      white-space: pre-wrap;
-      white-space: pre;
-      overflow-x: auto;
-      word-wrap: normal;
-      padding: 20px 10px;
-    }
-
-    .console .input {
-      color: #6AAB73;
-      font-style: italic;
-    }
-
-    code {
-      font-family: "JetBrains mono", monospace;
-      color: #BCBEC4;
-    }
-
-    .copy-button {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      padding: 5px 10px;
-      background-color: #FFC000;
-      color: #1E1F22;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-family: "JetBrains mono", monospace;
-      font-weight: bold;
-    }
-
-    .string {
-      color: #6AAB73;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .string-bracket,
-    .string-esc,
-    .keyword {
-      color: #CF8E6D;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .self {
-      color: #94558D;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .string-bracket-inner {
-      color: #BCBEC4;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .number {
-      color: #2AACB8;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .comments {
-      color: #7A7E85;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .metadata {
-      color: #B3AE60;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .built-in {
-      color: #8888C6;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .function {
-      color: #56A8F5;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .special-names {
-      color: #B200B2;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .keyword-argument {
-      color: #AA4926;
-      font-family: "JetBrains mono", monospace;
-    }
-  </style>
+  <link rel="stylesheet" href="https://shikonohito.github.io/Python_Bootcamp/styles/hw.css">
 </head>
 
 <body>
@@ -217,9 +52,9 @@ _ - свободные места</code></pre>
         <p>Затем программа <span class="hl-text">снова показывает главное меню<span>.</p>
         <p>При выборе <span class="hl-text">пункта 2</span> программа <span class="hl-text">запрашивает с консоли
             ряд</span> и <span class="hl-text">колонку</span>. Если место свободно, то программа должна <span
-            class="hl-text">вывести в консоль</span> <span class="string"><b>"Место успешно забронировано."</b></span>.
-          В противном случае должна <span class="hl-text">вывести</span> <span class="string"><b>"Место уже занято.
-              Пожалуйста, выберите другое место."</b></span> и после этого программа будет <span
+            class="hl-text">вывести в консоль</span> <code class="python"><b>"Место успешно забронировано."</b></code>.
+          В противном случае должна <span class="hl-text">вывести</span> <code class="python"><b>"Место уже занято.
+              Пожалуйста, выберите другое место."</b></code> и после этого программа будет <span
             class="hl-text">предлагать забронировать место до тех пор, пока не выберется свободное место</span> или же
           <span class="hl-text">не будут введены пустые строки</span>. После этого программа <span
             class="hl-text">возвращается в главное меню</span>.
@@ -241,9 +76,9 @@ if you do so, you are insulting yourself."
       <div class="right-rect">
         <h2>Домашнее Задание 28.3</h2>
         <p>Напишите функцию <span class="function"><b>draw_rectangle</b></span>, которая <span class="hl-text">ничего не
-            принимает</span> и <span class="hl-text">рисует в консоли незаполненный прямоугольник <span
-              class="number"><b>3</b></span> на <span class="number"><b>5</b></span> из символов</span> <span
-            class="string"><b>"*"</b></span>.</p>
+            принимает</span> и <span class="hl-text">рисует в консоли незаполненный прямоугольник <code
+              class="python"><b>3</b></code> на <code class="python"><b>5</b></code> из символов</span> <code
+            class="python"><b>"*"</b></code>.</p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.4</h2>
@@ -287,9 +122,9 @@ number = randint(start, end)  # Использование функции для
 
         <p>Затем напишите программу, которая <span class="hl-text">использует эту функцию</span>. Если функция
           возвращает <code class="python"><b>True</b></code>, то программа должна <span class="hl-text">выводить в
-            консоль</span> <span class="string"><b>"В строке содержатся английские буквы."</b></span>. В противном
-          случае программа должна выводить в консоль <span class="string"><b>"В строке отсутствуют английские
-              буквы."</b></span>.</p>
+            консоль</span> <code class="python"><b>"В строке содержатся английские буквы."</b></code>. В противном
+          случае программа должна выводить в консоль <code class="python"><b>"В строке отсутствуют английские
+              буквы."</b></code>.</p>
 
         <h3>Подсказка:</h3>
         <p>Решение Вы можете взять из <span class="hl-text">Домашнего Задания 24.3</span>. Только вместо вывода в
@@ -299,11 +134,11 @@ number = randint(start, end)  # Использование функции для
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 28.8</h2>
-        <p><span class="hl-text">Teston Lebra</span> написал функции и программу. Составьте комментарии по коду - <span
+        <p><span class="hl-text">Teston Lebra</span> написал функции и программу. Составьте комментарии по коду – <span
             class="hl-text">что делает программа</span>, <span class="hl-text">как она работает</span>, <span
-            class="hl-text">какие данные принимает</span>. Также опишите каждую функцию - <span class="hl-text">что она
-            делает</span> и <span class="hl-text">как она работает</span>. Также добавьте в главное меню пункты <span
-            class="string"><b>"Очистить корзину"</b></span> и <span class="string"><b>"Пополнить баланс"</b></span>.</p>
+            class="hl-text">какие данные принимает</span>. Также опишите каждую функцию – <span class="hl-text">что она
+            делает</span> и <span class="hl-text">как она работает</span>. Также добавьте в главное меню пункты <code
+            class="python"><b>"Очистить корзину"</b></code> и <code class="python"><b>"Пополнить баланс"</b></code>.</p>
         <h3>Код:</h3>
         <div class="console">
           <button class="copy-button" onclick="copyCode(this)"><svg xmlns="http://www.w3.org/2000/svg" width="15"
@@ -409,97 +244,6 @@ while True:
       </div>
     </div>
   </div>
-  <script>
-    function copyCode(button) {
-      var codeBlock = button.nextElementSibling.querySelector('code');
-      var range = document.createRange();
-      range.selectNode(codeBlock);
-      window.getSelection().removeAllRanges();
-      window.getSelection().addRange(range);
-      document.execCommand('copy');
-      window.getSelection().removeAllRanges();
-      changeCopyButton(button);
-    }
-
-    function changeCopyButton(button) {
-      var originalHTML = button.innerHTML;
-      button.innerHTML = `
-        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
-    `;
-      setTimeout(function () {
-        button.innerHTML = originalHTML;
-      }, 2000);
-    }
-    document.addEventListener('DOMContentLoaded', function () {
-      const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function (codeBlock, index) {
-        let innerHTML = codeBlock.innerHTML;
-        console.log(index, innerHTML);
-        // STRING
-        let regex = /(?<!\\)(f?"[^"\\]*(?:\\.[^"\\]*)*")/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        regex = /(?<!\\)(f?'[^'\\]*(?:\\.[^'\\]*)*')/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        // KEYWORD CLASS
-        regex = /(class)(?!=)/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORDS
-        const keywords = [
-          'def', 'for', 'in', 'while', 'and', 'or', 'not',
-          'if', 'elif', 'else', 'continue', 'break', 'try', 'with',
-          'as', 'except', 'finally', 'return', 'True', 'False', 'from', 'import', 'None'
-        ];
-        regex = new RegExp(`\\b(${keywords.join('|')})\\b`, 'g');
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORD NUMBER
-        regex = /\b\d+(\.\d+)?/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="number">${match}</span>`;
-        });
-        // STRING-ESC
-        regex = /\\./g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string-esc">${match}</span>`;
-        });
-        // COMMENTS
-        regex = /(#.*$)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="comments">${match}</span>`;
-        });
-        // METADATA
-        regex = /^(\s*@\w+)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="metadata">${match}</span>`;
-        });
-        // SELF
-        regex = /\bself\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="self">${match}</span>`;
-        });
-        // BUILT-IN
-        regex = /\b(open|print|input|int|float|str|list|set|dict|range|len|sum|min|max)\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="built-in">${match}</span>`;
-        });
-        // FUNCTION
-        regex = /(<span class="keyword">def<\/span>)\s(\w+)\(/g;
-        innerHTML = innerHTML.replace(regex, '$1 <span class="function">$2</span>(');
-        // SPECIAL-NAMES
-        regex = /(<span class="function">)(__\w+__)(<\/span>)/g;
-        innerHTML = innerHTML.replace(regex, '$1<span class="special-names">$2</span>$3');
-        // KEYWORD-ARGUMENT
-        regex = /, (end|sep)=/g;
-        innerHTML = innerHTML.replace(regex, ', <span class="keyword-argument">$1</span>=');
-        codeBlock.innerHTML = innerHTML
-      });
-    });
-  </script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/copyButton.js"></script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/highlighter.js"></script>
 </body>
