--- a/Урок 28-34. Функции. Модули/Python - HW30.html
+++ b/Урок 28-34. Функции. Модули/Python - HW30.html
@@ -7,177 +7,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap"
     rel="stylesheet">
-  <style>
-    body {
-      background: linear-gradient(to right, #333333 0%, #404040 57%, #363636 100%);
-      color: #fff;
-      font-family: "Inter", sans-serif;
-      margin: 0px;
-    }
-
-    .container {
-      display: flex;
-      flex-direction: row;
-    }
-
-    .sidebar {
-      width: 240px;
-      height: 280px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      box-sizing: border-box;
-      position: sticky;
-      top: 0;
-    }
-
-    .sidebar img {
-      height: 240px;
-      width: 240px;
-    }
-
-    .sidebar #copyrights {
-      background: linear-gradient(to right, #343434 0%, #363636 100%);
-      -webkit-background-clip: text;
-      color: transparent;
-    }
-
-    .right-block {
-      flex: 1;
-      width: 70%;
-      gap: 50px;
-      box-sizing: border-box;
-      display: flex;
-      flex-direction: column;
-      padding: 50px 25px 50px 0;
-      margin: 10px;
-    }
-
-    .right-rect {
-      background-color: rgba(38, 38, 38, 0.75);
-      box-shadow: 10px 10px 15px rgba(0, 0, 0, 0.6);
-      padding: 30px 25px;
-      border-radius: 10px;
-    }
-
-    .right-rect h2,
-    .right-rect .hl-text {
-      margin: 0;
-      color: #FFC000;
-    }
-
-    .right-rect h3 {
-      margin-top: 40px;
-      margin-bottom: 0px;
-      color: #FFC000;
-    }
-
-    .console {
-      background-color: #1E1F22;
-      border-radius: 5px;
-      margin-top: 10px;
-      position: relative;
-    }
-
-    p {
-      margin-top: 15px;
-      margin-bottom: 0px;
-    }
-
-    pre {
-      white-space: pre-wrap;
-      white-space: pre;
-      overflow-x: auto;
-      word-wrap: normal;
-      padding: 20px 10px;
-    }
-
-    .console .input {
-      color: #6AAB73;
-      font-style: italic;
-    }
-
-    code {
-      font-family: "JetBrains mono", monospace;
-      color: #BCBEC4;
-    }
-
-    .copy-button {
-      position: absolute;
-      top: 5px;
-      right: 5px;
-      padding: 5px 10px;
-      background-color: #FFC000;
-      color: #1E1F22;
-      border: none;
-      border-radius: 5px;
-      cursor: pointer;
-      font-family: "JetBrains mono", monospace;
-      font-weight: bold;
-    }
-
-    .string {
-      color: #6AAB73;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .string-bracket,
-    .string-esc,
-    .keyword {
-      color: #CF8E6D;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .self {
-      color: #94558D;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .string-bracket-inner {
-      color: #BCBEC4;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .number {
-      color: #2AACB8;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .comments {
-      color: #7A7E85;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .metadata {
-      color: #B3AE60;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .built-in {
-      color: #8888C6;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .function {
-      color: #56A8F5;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .special-names {
-      color: #B200B2;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .keyword-argument {
-      color: #AA4926;
-      font-family: "JetBrains mono", monospace;
-    }
-
-    .grey {
-      color: #BCBEC4;
-      font-family: "JetBrains mono", monospace;
-    }
-  </style>
+  <link rel="stylesheet" href="https://shikonohito.github.io/Python_Bootcamp/styles/hw.css">
 </head>
 
 <body>
@@ -199,10 +29,10 @@
       <div class="right-rect">
         <h2>Домашнее Задание 30.1</h2>
         <p>Напишите функцию <span class="function"><b>generate_password</b></span>, которая <span
-            class="hl-text">принимает необязательную длину</span> (по умолчанию <span class="number"><b>8</b></span>) и
-          <span class="number"><b>3</b></span> <span class="hl-text">необязательных параметра</span> (по умолчанию <code
+            class="hl-text">принимает необязательную длину</span> (по умолчанию <code class="python"><b>8</b></code>) и
+          <code class="python"><b>3</b></code> <span class="hl-text">необязательных параметра</span> (по умолчанию <code
             class="python"><b>False</b></code>), которые принимают только <code class="python"><b>True</b></code> или
-          <code class="python"><b>False</b></code> - <span class="hl-text">содержит цифры</span>, <span
+          <code class="python"><b>False</b></code> – <span class="hl-text">содержит цифры</span>, <span
             class="hl-text">заглавные буквы</span>, <span class="hl-text">специальные символы</span>. Функция должна
           <span class="hl-text">сформировать строку пароля по указанным параметрам</span> и <span
             class="hl-text">вернуть её</span>.
@@ -214,40 +44,44 @@
         <h2>Домашнее Задание 30.2</h2>
         <p>Напишите функцию <span class="function"><b>convert_seconds</b></span>, которая <span
             class="hl-text">принимает секунды</span> и <span class="hl-text">необязательный символ</span> (по умолчанию
-          <span class="string"><b>"m"</b></span>). Функция должна <span class="hl-text">перевести секунды</span> и <span
+          <code class="python"><b>"m"</b></code>). Функция должна <span class="hl-text">перевести секунды</span> и <span
             class="hl-text">вернуть результат</span>. Переводы зависят от необязательного символа:
-          <br>— Если символ <span class="string"><b>"m"</b></span>, то перевод в <span class="hl-text">минуты</span>
-          <br>— Если символ <span class="string"><b>"h"</b></span>, то перевод в <span class="hl-text">часы</span>
-          <br>— Если символ <span class="string"><b>"d"</b></span>, то перевод в <span class="hl-text">дни</span>
+        <ul>
+          <li>Если символ <code class="python"><b>"m"</b></code>, то перевод в <span class="hl-text">минуты</span>.</li>
+          <li>Если символ <code class="python"><b>"h"</b></code>, то перевод в <span class="hl-text">часы</span>.</li>
+          <li>Если символ <code class="python"><b>"d"</b></code>, то перевод в <span class="hl-text">дни</span>.</li>
+        </ul>
         </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 30.3</h2>
         <p>Напишите функцию <span class="function"><b>find_str_index</b></span>, которая <span class="hl-text">принимает
             строку</span>, <span class="hl-text">символ</span> и <span class="hl-text">необязательный индекс</span> (по
-          умолчанию <span class="number"><b>0</b></span>). Функция должна <span class="hl-text">вернуть индекс первого
+          умолчанию <code class="python"><b>0</b></code>). Функция должна <span class="hl-text">вернуть индекс первого
             вхождения символа в строку, начиная поиск с указанного индекса</span>. Если индекс не найден, то функция
-          должна <span class="hl-text">вернуть</span> <span class="grey"><b>-</span><span class="number">1</span></b>.
+          должна <span class="hl-text">вернуть</span> <code class="python"><b>-1</code></b>.
         </p>
       </div>
       <div class="right-rect">
         <h2>Домашнее Задание 30.4</h2>
         <p>Напишите функцию <span class="function"><b>users_expiration_check</b></span>, которая <span
             class="hl-text">принимает список пользователей</span>, <span class="hl-text">необязательные количество дней
-            как число</span> (по умолчанию <span class="number"><b>30</b></span>) и <span class="hl-text">режим как
-            строку</span> (по умолчанию <span class="string"><b>"safe"</b></span>). Функция должна <span
+            как число</span> (по умолчанию <code class="python"><b>30</b></code>) и <span class="hl-text">режим как
+            строку</span> (по умолчанию <code class="python"><b>"safe"</b></code>). Функция должна <span
             class="hl-text">найти всех пользователей, у которых число дней с последнего захода больше, чем указано во
             втором параметре функции</span>, и <span class="hl-text">действовать в зависимости от режима</span>:
-          <br>— <span class="hl-text"><b>safe:</b></span> не изменяет список пользователей, возвращает список из
-          найденных индексов пользователей
-          <br>— <span class="hl-text"><b>pop:</b></span> добавляет найденного пользователя в новый список, удаляет из
-          списка пользователей, возвращает новый список
-          <br>— <span class="hl-text"><b>remove:</b></span> удаляет из списка пользователей найденных пользователей,
-          возвращает пустой список
+        <ul>
+          <li><span class="hl-text"><b>safe:</b></span> не изменяет список пользователей, возвращает список из
+            найденных индексов пользователей.</li>
+          <li><span class="hl-text"><b>pop:</b></span> добавляет найденного пользователя в новый список, удаляет из
+            списка пользователей, возвращает новый список.</li>
+          <li><span class="hl-text"><b>remove:</b></span> удаляет из списка пользователей найденных пользователей,
+            возвращает пустой список.</li>
+        </ul>
         </p>
-        <p>Пользователь это список, у которого по индексу <span class="number"><b>0</b></span> находится <span
-            class="hl-text">логин</span>, по индексу <span class="number"><b>1</b></span> находится <span
-            class="hl-text">пароль</span>, по индексу <span class="number"><b>2</b></span> находится <span
+        <p>Пользователь это список, у которого по индексу <code class="python"><b>0</b></code> находится <span
+            class="hl-text">логин</span>, по индексу <code class="python"><b>1</b></code> находится <span
+            class="hl-text">пароль</span>, по индексу <code class="python"><b>2</b></code> находится <span
             class="hl-text">число дней с последнего захода</span>.</p>
 
         <h3>Тестовый список пользователей:</h3>
@@ -708,97 +542,6 @@ while True:
       </div>
     </div>
   </div>
-  <script>
-    function copyCode(button) {
-      var codeBlock = button.nextElementSibling.querySelector('code');
-      var range = document.createRange();
-      range.selectNode(codeBlock);
-      window.getSelection().removeAllRanges();
-      window.getSelection().addRange(range);
-      document.execCommand('copy');
-      window.getSelection().removeAllRanges();
-      changeCopyButton(button);
-    }
-
-    function changeCopyButton(button) {
-      var originalHTML = button.innerHTML;
-      button.innerHTML = `
-        <svg width="15" height="15" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon-sm"><path fill-rule="evenodd" clip-rule="evenodd" d="M18.0633 5.67375C18.5196 5.98487 18.6374 6.607 18.3262 7.06331L10.8262 18.0633C10.6585 18.3093 10.3898 18.4678 10.0934 18.4956C9.79688 18.5234 9.50345 18.4176 9.29289 18.2071L4.79289 13.7071C4.40237 13.3166 4.40237 12.6834 4.79289 12.2929C5.18342 11.9023 5.81658 11.9023 6.20711 12.2929L9.85368 15.9394L16.6738 5.93664C16.9849 5.48033 17.607 5.36263 18.0633 5.67375Z" fill="currentColor"></path></svg>Copied!
-    `;
-      setTimeout(function () {
-        button.innerHTML = originalHTML;
-      }, 2000);
-    }
-    document.addEventListener('DOMContentLoaded', function () {
-      const codeBlocks = document.querySelectorAll('code.python');
-      codeBlocks.forEach(function (codeBlock, index) {
-        let innerHTML = codeBlock.innerHTML;
-        console.log(index, innerHTML);
-        // STRING
-        let regex = /(?<!\\)(f?"[^"\\]*(?:\\.[^"\\]*)*")/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        regex = /(?<!\\)(f?'[^'\\]*(?:\\.[^'\\]*)*')/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string">${match}</span>`;
-        });
-        // KEYWORD CLASS
-        regex = /(class)(?!=)/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORDS
-        const keywords = [
-          'def', 'for', 'in', 'while', 'and', 'or', 'not',
-          'if', 'elif', 'else', 'continue', 'break', 'try', 'with',
-          'as', 'except', 'finally', 'return', 'True', 'False', 'from', 'import', 'pass', 'None', 'del'
-        ];
-        regex = new RegExp(`\\b(${keywords.join('|')})\\b`, 'g');
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="keyword">${match}</span>`;
-        });
-        // KEYWORD NUMBER
-        regex = /\b\d+(\.\d+)?/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="number">${match}</span>`;
-        });
-        // STRING-ESC
-        regex = /\\./g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="string-esc">${match}</span>`;
-        });
-        // COMMENTS
-        regex = /(#.*$)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="comments">${match}</span>`;
-        });
-        // METADATA
-        regex = /^(\s*@\w+)/gm;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="metadata">${match}</span>`;
-        });
-        // SELF
-        regex = /\bself\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="self">${match}</span>`;
-        });
-        // BUILT-IN
-        regex = /\b(open|print|input|int|float|str|list|set|dict|range|len|sum|min|max|bool)\b/g;
-        innerHTML = innerHTML.replace(regex, (match) => {
-          return `<span class="built-in">${match}</span>`;
-        });
-        // FUNCTION
-        regex = /(<span class="keyword">def<\/span>)\s(\w+)\(/g;
-        innerHTML = innerHTML.replace(regex, '$1 <span class="function">$2</span>(');
-        // SPECIAL-NAMES
-        regex = /(<span class="function">)(__\w+__)(<\/span>)/g;
-        innerHTML = innerHTML.replace(regex, '$1<span class="special-names">$2</span>$3');
-        // KEYWORD-ARGUMENT
-        regex = /, (end|sep)=/g;
-        innerHTML = innerHTML.replace(regex, ', <span class="keyword-argument">$1</span>=');
-        codeBlock.innerHTML = innerHTML
-      });
-    });
-  </script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/copyButton.js"></script>
+  <script src="https://shikonohito.github.io/Python_Bootcamp/scripts/highlighter.js"></script>
 </body>
